8131778: java disables UseAES flag when using VIS=2 on sparc

Reviewed-by: iignatyev, kvn